# mono-trading

./: Cargo.toml  LICENSE  README.md  requirements.txt  setup.sh
.notebooks/: Backtesting Scratch.ipynb  Datasets.ipynb  Importer.ipynb  Scratch.ipynb
notebooks/: Backtesting Scratch.ipynb  Importer.ipynb
src/: main.rs
src/data/: __init__.py  mod.rs
src/data/binance/: client.py  client.rs  constants.py  functional.py  mod.rs
src/utils/: __init__.py  loading.py
trading/data/: Dataset.py  __init__.py
trading/data/binance/: client.py  constants.py  functional.py
trading/data/test/resources/: simple_pair_df.parquet
trading/data/test/unit/: test_datasets.py  test_import.py  test_validation.py
trading/exchange/: Exchange.py
trading/exchange/dummy/: Exchange.py
trading/utils/: Pairs.py  loading.py
