[package]
name = "mono-trading"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1.24.1", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
polars = "0.27.2"
